--- a/src/Main.css
+++ b/src/Main.css
@@ -40,21 +40,56 @@ body {
 }
 
 .nav {
-  height: calc(var(--lh) + var(--p) * 2);
+  height: calc(var(--lh) * 2 + var(--p) * 2);
   background: var(--color-primary);
 }
 
 .logs {
-
+  position: relative;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 .log {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   padding: 1px calc(var(--p) * 6) 1px calc(var(--p) * 3);
 }
 
-.log-box {
+.log__box {
   padding: calc(var(--p) / 2);
+  height: 100%;
   box-shadow: inset 0 0 0 1px rgba(0,0,0,0.05);
   border-radius: var(--radius);
   background: rgba(0,0,0,0.1);
+}
+
+.log__SelfCare {
+
+}
+
+.log__Recreative {
+
+}
+
+.log__Creative {
+
+}
+
+.log__SelfGrowth {
+
+}
+
+.log__Uncategorized {
+
+}
+
+.log__Empty {
+  opacity: 0.25;
+}
+
+.log--edit .log__box {
+  box-shadow: inset 0 0 0 1px rgba(0,0,0,1);
 }
