--- a/src/Main.css
+++ b/src/Main.css
@@ -5,6 +5,8 @@
 
   --color-primary: darkslateblue;
   --color-secondary: sienna;
+
+  --nav-height: calc(var(--lh) * 2 + var(--p) * 2);
 }
 
 * {
@@ -36,18 +38,43 @@ body {
 }
 
 .main {
-  flex-grow: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: var(--nav-height);
+}
+
+.debug {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  z-index: 100;
+  pointer-events: none;
+  font-size: 24px;
+  background: rgba(0,255, 0, 1);
 }
 
 .nav {
-  height: calc(var(--lh) * 2 + var(--p) * 2);
+  height: var(--nav-height);
   background: var(--color-primary);
+}
+
+.viewport {
+  height: 100%;
+  overflow-x: hidden;
+}
+
+.test {
+  position: absolute;
+  top: 500px;
+  width: 100%;
+  height: 100px;
+  background: blue;
 }
 
 .logs {
   position: relative;
-  height: 100%;
-  overflow-x: hidden;
 }
 
 .log {
@@ -59,11 +86,16 @@ body {
 }
 
 .log__box {
-  padding: calc(var(--p) / 2);
+  /* padding: calc(var(--p) / 2); */
   height: 100%;
   box-shadow: inset 0 0 0 1px rgba(0,0,0,0.05);
   border-radius: var(--radius);
   background: rgba(0,0,0,0.1);
+}
+
+.log__Ghost .log__box {
+  opacity: 0.25;
+  background: blue;
 }
 
 .log__SelfCare {
