--- a/src/Main.sass
+++ b/src/Main.sass
@@ -56,12 +56,15 @@ body
 
 .debug
   position: absolute
-  top: 100px
+  top: 0
   left: 0
   z-index: 100
+  padding: $p/2
   pointer-events: none
-  font-size: 24px
-  background: rgba(0,255, 0, 1)
+  color: white
+  font-size: 0.75rem
+  background: rgba(#000, 0.3)
+  border-bottom-right-radius: $radius
 
 
 .nav
@@ -138,7 +141,8 @@ body
     background: rgba(#000, 0.07)
 
   &__titleInput
-    margin: 0 $p/2
+    margin-left: $p/2
+    margin-right: $lh + $p/2
     padding: $p/2
     border-radius: $radius
     display: block
@@ -146,6 +150,8 @@ body
     width: 100%
     border: 0
     font-family: inherit
+    font-size: inherit
+    background: transparent
     &:hover
       box-shadow: $hover-shadow
     &:focus
@@ -171,6 +177,16 @@ body
     cursor: pointer
     &:hover, &:active, &:focus
       background: rgba(#F00, 0.2)
+  &.log--60min .log__delete
+    height: 100%
+    border-bottom-right-radius: $radius
+    border-bottom-left-radius: 0
+    border-bottom: 0
+
+
+  &.log--30min .log__titleInput:not(:focus)
+    font-size: 0.5rem
+
 
   &--edit .log__box
     box-shadow: inset 0 0 0 1px rgba(#000,1)
@@ -178,19 +194,20 @@ body
   /* Category specific styles */
 
   $logs-colors: ("Ghost": #1165af,
-  "SelfCare": #964a39,
-  "Recreative": #509639,
-  "Creative": #397496,
-  "SelfGrowth": #96398e)
+  "SelfCare": #8c3f1b,
+  "Recreative": #6b8c1b,
+  "Creative": #1b538c,
+  "SelfGrowth": #751b8c)
 
   @each $name, $color in $logs-colors
     &.log--#{$name}
-      .log__category
+      .log__category div
         background-color: $color
       .log__title
         background-color: rgba($color, 0.25)
     .log__categorySelect--#{$name}
       background-color: $color
+
   &--Ghost .log__box
     background-color: rgba(#00F, 0.2)
   &--Uncategorized
