--- a/src/Main.sass
+++ b/src/Main.sass
@@ -15,6 +15,8 @@ $color-text-inverted: rgba(#fff, 0.7)
 $focus-shadow: inset 0 0 0 2px rgba($color-primary, 0.7)
 $hover-shadow: inset 0 0 0 2px rgba($color-primary, 0.2)
 
+$background-color: #fafafa
+
 *
   box-sizing: border-box
 
@@ -37,9 +39,9 @@ input, button, div
     outline: none
 
 body
-  line-height: var(--lh)
+  line-height: $lh
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
-  background-color: #fafafa
+  background-color: $background-color
 
 
 .container
@@ -81,6 +83,14 @@ body
   &--dragging
     user-select: none
 
+  &-gradient
+    position: absolute
+    z-index: 0
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+
 
 .test
   position: absolute
@@ -99,7 +109,8 @@ body
   top: 0
   left: 0
   width: 100%
-  padding: 1px $p*6 1px $p*3
+  padding: 2px $p*6 1px $p*3
+  z-index: 2
 
   &__time
     position: absolute
@@ -117,6 +128,7 @@ body
     align-items: center
     height: 100%
     border-radius: $radius
+    background: mix(#000, $background-color, 7%)
 
 
   &__category
@@ -142,7 +154,7 @@ body
     align-items: center
     height: 100%
     border-radius: 0 $radius $radius 0
-    background: rgba(#000, 0.07)
+    // background: rgba(#000, 0.07)
     transition: background-color 0.5s
 
   &__titleInput
