--- a/src/Main.sass
+++ b/src/Main.sass
@@ -83,13 +83,23 @@ body
   &--dragging
     user-select: none
 
-  &-gradient
+  &-time-layer
     position: absolute
     z-index: 0
     top: 0
     left: 0
     right: 0
     bottom: 0
+
+  $time-now-height: 75px
+  &-time-now
+    position: absolute
+    width: 100%
+    height: $time-now-height
+    margin-top: -$time-now-height
+    background-image: linear-gradient(0deg, rgba(255, 0, 0, 0.4) 0 1px, rgba(255, 42, 42, 0.15) 0 1px, transparent #{$time-now-height})
+    z-index: 100
+    pointer-events: none
 
 
 .test
