Made the screen adjust to the begining and end of day, and the scroll adjust automatically

--- a/src/Main.sass
+++ b/src/Main.sass
@@ -152,6 +152,7 @@ body
     border-top-left-radius: $radius
     border-bottom-left-radius: $radius
     overflow: hidden
+    line-height: $lh / 2
     div
       flex: 1
 
@@ -162,7 +163,6 @@ body
     align-items: center
     height: 100%
     border-radius: 0 $radius $radius 0
-    // background: rgba(#000, 0.07)
     transition: background-color 0.5s
 
   &__titleInput
