--- a/src/Main.sass
+++ b/src/Main.sass
@@ -107,12 +107,38 @@ body
   &-split
     position: absolute
     left: 0
-    height: $lh
-    margin-top: -$lh / 2
-    width: $p*2.5
-    text-align: right
-    font-size: 0.8rem
-    color: $color-text-dim
+    width: 100%
+    z-index: 200
+    &-hour
+      position: absolute
+      left: 0
+      height: $lh
+      margin-top: -$lh / 2
+      width: $p*2.5
+      text-align: right
+      font-size: 0.8rem
+      color: $color-text-dim
+
+    $move-handle-shadow: 0 1px 0 0 rgba(#000,0.15), 0 0 3px 0 rgba(#000,0.1)
+    &-move
+      position: absolute
+      left: 50%
+      top: -6px
+      width: $p*3
+      height: 14px
+      margin-left: -$p*3
+      line-height: 12px
+      text-align: center
+      font-weight: lighter
+      color: rgba(#000, 0.4)
+      background: #e8e8e8
+      border-radius: 3px
+      box-shadow: $move-handle-shadow
+      cursor: ns-resize
+      &:before
+        content: "="
+      &:hover
+        background: lighten(#e8e8e8, 3%)
 .test
   position: absolute
   top: 500px
